Bug 182926 - kmail not sorting new/unread column
Summary: kmail not sorting new/unread column
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-02 22:59 UTC by Mark van Rossum
Modified: 2009-03-08 23:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark van Rossum 2009-02-02 22:59:59 UTC
Version:           1.11.0 (using 4.2.00 (KDE 4.2.0), 4.2.0-7.fc10 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.12-170.2.5_1.cubbi_tuxonice.fc10.i686

In the latest kmail sorting on the new/unread column does not work.


I use the "flat date view" and would like to find the latest mail at the top (or bottom).
Now that the "date received" column is gone, this has become impossible.
Comment 1 itsjustarumour 2009-02-06 15:30:44 UTC
Also confirming same problem on Kubuntu Intrepid using KDE 4.2.00 and KMail 1.11.0.  I am also using the classic "Flat Date View".
Comment 2 Jaime Torres 2009-02-07 23:04:15 UTC
Right click over one of the column heeaders in the message list (in grey at the top of the message list).
You should view a list with all the available headers. Between them there are the Date and Most Recent Date, also Seen/Unread, Replied, .....

Does it solves your problem?
Comment 3 Mark van Rossum 2009-02-07 23:44:31 UTC
Comment #2 does not solve it.(In reply to comment #2)
> Right click over one of the column heeaders in the message list (in grey at the
> top of the message list).
> You should view a list with all the available headers. Between them there are
> the Date and Most Recent Date, also Seen/Unread, Replied, .....
> 
> Does it solves your problem?

No. The problem is that kmail does not sort on the new /unread column.
Comment 4 itsjustarumour 2009-02-08 01:02:22 UTC
Hello Mark,
No, it doesn't solve the problem for me either.  The column header for "New/Unread" is showing correctly, and when I double click on it the little black triangle icon points either upwards or downwards to indicate my selction, but the emails aren't sorted.
Comment 5 itsjustarumour 2009-02-08 01:08:56 UTC
@Jaime,
Is there any other info I can provide?
Comment 6 Szymon Stefanek 2009-03-08 23:34:29 UTC
SVN commit 937056 by stefanek:

Add the possibility of sorting by New/Unread message status.

BUG: 182926



 M  +35 -0     item.h  
 M  +1 -1      manager.cpp  
 M  +22 -0     model.cpp  
 M  +7 -1      model.h  
 M  +2 -0      sortorder.cpp  
 M  +2 -1      sortorder.h  
 M  +14 -1     theme.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=937056