Add the possibility of sorting by New/Unread message status.

BUG: 182926


svn path=/trunk/KDE/kdepim/; revision=937056